--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Моя фотогалерея</h1>
-        <p>Лучшие моменты жизни</p>
+        <p>Лучшие моменты жиззззззззззззни</p>
     </header>
 
     <div class="gallery-container">
