--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Собака</title>
+    <title>glory hole</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Моя фотогалерея</h1>
-        <p>Лучшие моменты жиззззззззззззни</p>
+        <h1>big words</h1>
+        <p>some more fucking litle words about us</p>
     </header>
 
     <div class="gallery-container">
