--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>glory hole</title>
+    <title>wooow</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>big words</h1>
-        <p>some more fucking litle words about us</p>
+        <p>some more litle words about us</p>
     </header>
 
     <div class="gallery-container">
